# FastSpectrum

./: .gitignore  .gitmodules  Basis.cpp  Basis.h  CMakeLists.txt  EigenSolver.cpp  EigenSolver.h  LICENSE  Main.cpp  README.md  Sampling.cpp  Sampling.h  Utility.cpp  Utility.h  Visualization.cpp  Visualization.h
Fast Spectrum/: App_DiffusionDistance.cpp  App_DiffusionDistance.h  App_MeshFilter.cpp  App_MeshFilter.h  App_VariableOperator.cpp  App_VariableOperator.h  Basis.cpp  Basis.h  CMakeLists.txt  EigenSolver.cpp  EigenSolver.h  FastSpectrum.cpp  FastSpectrum.h  FastSpectrumGUI.h  Main.cpp  Sampling.cpp  Sampling.h  Utility.cpp  Utility.h  Visualization.cpp  Visualization.h
